--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 # External packages with version specifications
 requests==2.28.2
-pandas==2.0.0
+pandas==2.1.3
 beautifulsoup4==4.12.0
 lxml==4.9.3
 python-dotenv==1.0.0
 sqlalchemy==2.0.21
 pyodbc==4.0.39
+streamlit==1.28.2
+rapidfuzz==3.5.2
