--- a/.github/workflows/python-automation.yml
+++ b/.github/workflows/python-automation.yml
@@ -24,4 +24,8 @@ jobs:
       - name: Run Python script
         env:
             DB_HOST: ${{ secrets.DB_HOST }}
-        run: python test.py
+            DB_PORT: ${{ secrets.DB_PORT }}
+            DB_NAME: ${{ secrets.DB_NAME }}
+            DB_USER: ${{ secrets.DB_USER }}
+            DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+        run: python recipe_scraping_script.py
